<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.SettingsActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_screens"
            android:focusable="true"
            android:focusableInTouchMode="true">


            <TextView
                style="@style/PageTitleStyle"
                android:id="@+id/titlePageSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:text="@string/page_title_config"
                app:layout_constraintBottom_toBottomOf="@+id/btnBackSettingsId"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnBackSettingsId" />

            <ImageView
                android:id="@+id/btnBackSettingsId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/ic_back_description"
                android:tint="@color/primaryColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_container_screens"
                android:fillViewport="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnBackSettingsId"
                app:layout_constraintVertical_bias="0.0" >


                <TextView
                    android:id="@+id/tvTitleSettingsAlarm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64dp"
                    android:layout_marginTop="48dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/title_config"
                    android:textSize="@dimen/size_font_normal_smartphone"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/btnStopVibrationId"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitleSettingsAlarm">

                    <TextView
                        android:id="@+id/tvTitleStopVibrationId"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="64dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/title_vibrar_config"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="@dimen/size_font_normal_smartphone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvValueInitStopVibrationId"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="64dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/value1_vibrar_inicial_config"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="@dimen/size_font_small_smartphone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvTitleStopVibrationId" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/btnSleepId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnStopVibrationId">

                    <TextView
                        android:id="@+id/tvTitleSleepId"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="64dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/title_soneca_config"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="@dimen/size_font_normal_smartphone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/valueInitSleepId"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="64dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/value2_soneca_inicial_config"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="@dimen/size_font_small_smartphone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvTitleSleepId" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/ivIconAlarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:contentDescription="@string/bottom_nav_title_alarmes"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnSleepId"
                    app:srcCompat="@drawable/ic_menu_alarm" />

                <TextView
                    android:id="@+id/tvIncreaseVibration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/title_niveis_vibracoes"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/size_font_normal_smartphone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/ivIconAlarm"
                    app:layout_constraintTop_toBottomOf="@+id/btnSleepId" />

                <SeekBar
                    android:id="@+id/progressVibrationId"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:progressBackgroundTint="@color/primaryDarkColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivIconAlarm"
                    app:layout_constraintTop_toBottomOf="@+id/tvIncreaseVibration" />

                <TextView
                    android:id="@+id/levelOneId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="62dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/nivel_1_config"
                    android:textSize="@dimen/size_font_normal_smartphone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/progressVibrationId" />

                <TextView
                    android:id="@+id/levelTwoId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/nivel_2_config"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/size_font_normal_smartphone"
                    app:layout_constraintEnd_toStartOf="@+id/levelThreeId"
                    app:layout_constraintStart_toEndOf="@+id/levelOneId"
                    app:layout_constraintTop_toBottomOf="@+id/progressVibrationId" />

                <TextView
                    android:id="@+id/levelThreeId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/nivel_3_config"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/size_font_normal_smartphone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/progressVibrationId" />

                <TextView
                    android:id="@+id/tvIncreaseGradualId"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/subtitle_aumentar_vibracoes_config"
                    android:textColor="@color/primaryTextColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/increaseId"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/levelTwoId"
                    app:layout_constraintVertical_bias="0.0" />

                <Switch
                    android:id="@+id/increaseId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:checked="false"
                    app:layout_constraintBottom_toBottomOf="@+id/tvIncreaseGradualId"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tvIncreaseGradualId" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>