<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/containerTimePickerId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:cardCornerRadius="@dimen/corner_default"
        app:cardElevation="@dimen/elevation_dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primaryColor">

            <ImageView
                android:id="@+id/ivIconDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/ic_dialog_iv_description"
                android:tint="@color/secondaryColor"
                app:layout_constraintBottom_toTopOf="@+id/divTop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_delete" />

            <TextView
                android:id="@+id/tvTitleAlertDialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/alertdialog_title_delete_alarm"
                android:textAlignment="textStart"
                android:textColor="@color/secondaryColor"
                android:textSize="@dimen/font_size_big_smartphone"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/ivIconDialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivIconDialog"
                app:layout_constraintTop_toTopOf="@+id/ivIconDialog" />

            <TextView
                android:id="@+id/divTop"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/primaryLightColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleAlertDialog" />

            <TextView
                android:id="@+id/descriptionDelete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/alertdialog_descripton_delete_alarm"
                android:textAlignment="center"
                android:textColor="@color/secondaryColor"
                android:textSize="@dimen/font_size_big_smartphone"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/divBottom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divTop" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="41dp" />

            <TextView
                android:id="@+id/divBottom"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/primaryLightColor"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline2" />

            <TextView
                android:id="@+id/btnDeleteConfirmId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24dp"
                android:padding="5dp"
                android:text="@string/btn_alert_title_delete_alarm"
                android:textAlignment="textEnd"
                android:textColor="@color/secondaryColor"
                android:textSize="@dimen/size_font_btn"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divBottom" />

            <TextView
                android:id="@+id/btnDeleteCanceledId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:padding="5dp"
                android:text="@string/btn_alert_title_delete_alarm_canceled"
                android:textAlignment="textEnd"
                android:textColor="@color/secondaryColor"
                android:textSize="@dimen/size_font_btn"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divBottom"
                app:layout_constraintVertical_bias="0.516" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>