<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primaryColor">

    <TextView
        android:id="@+id/hourAlarmTvId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/value_init_hour_alarm"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/size_hour_alarm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/setAlarmSwId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:switchPadding="@dimen/padding_default"
        android:text="@string/off_alarm"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toBottomOf="@+id/hourAlarmTvId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hourAlarmTvId" />

    <TextView
        android:id="@+id/divAlarmContainerId"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/primaryLightColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnDeleteAlarmId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/divAlarmContainerId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hourAlarmTvId">

        <TextView
            android:id="@+id/deleteTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/btn_alert_title_delete_alarm"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/icDelete"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/icDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/btn_alert_title_delete_alarm"
            android:tint="@color/primaryTextColor"
            app:layout_constraintBottom_toBottomOf="@+id/deleteTv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/deleteTv"
            app:srcCompat="@drawable/ic_delete" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>