<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.ChronometerFragment"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor">

        <Chronometer
            android:id="@+id/chronometerValueId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:gravity="center|clip_vertical|center_horizontal"
            android:textAlignment="center"
            android:textSize="@dimen/size_font_clock"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnChronometerId"
            style="@style/BtnStyles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/btn_title_iniciar_crono"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chronometerValueId" />

        <TextView
            android:id="@+id/divAlarmId"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@color/primaryLightColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnChronometerId" />

        <TextView
            android:id="@+id/btnResetId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/btn_title_zerar_crono"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/primaryTextColor"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divAlarmId" />

        <TextView
            android:id="@+id/tvDescriptionChronometerId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/txt_description_crono"
            android:textAlignment="center"
            android:textSize="@dimen/font_size_normal_smartphone"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divAlarmId" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>